Configured use of libpcap, counting packets example from blog

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,5 +3,10 @@ cmake_minimum_required(VERSION 3.10)
 # set the project name
 project(sniffer)
 
-include_directories(sniffer/include)
-add_executable(sniffer sniffer/src/main.cpp)
+set(CMAKE_CXX_STANDARD 11)
+
+include(FindPCAP.cmake)
+
+set(SOURCE_FILES sniffer/src/main.cpp)
+add_executable(sniffer ${SOURCE_FILES})
+target_link_libraries(sniffer ${PCAP_LIBRARY})
