C++ OOP from example

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,12 +1,18 @@
 cmake_minimum_required(VERSION 3.10)
-
-# set the project name
 project(sniffer)
 
 set(CMAKE_CXX_STANDARD 11)
 
+#libpcap
 include(FindPCAP.cmake)
 
-set(SOURCE_FILES sniffer/src/main.cpp)
+set(SOURCE_DIR sniffer/src)
+set(INCLUDE_DIR sniffer/include)
+set(SOURCE_FILES 
+    ${SOURCE_DIR}/main.cpp
+    ${SOURCE_DIR}/basic_sniffer.cpp
+)
+
+include_directories(${INCLUDE_DIR})
 add_executable(sniffer ${SOURCE_FILES})
 target_link_libraries(sniffer ${PCAP_LIBRARY})
