Added simple statistics print on console

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,5 +1,5 @@
 cmake_minimum_required(VERSION 3.10)
-project(sniffer)
+project(sniffer_project)
 
 set(CMAKE_CXX_STANDARD 11)
 
@@ -8,12 +8,20 @@ include(FindPCAP.cmake)
 
 set(SOURCE_DIR sniffer/src)
 set(INCLUDE_DIR sniffer/include)
-set(SOURCE_FILES 
+set(HEADER_FILES 
+    ${INCLUDE_DIR}/basic_sniffer.hpp 
+    ${INCLUDE_DIR}/display.hpp
+    ${INCLUDE_DIR}/common.hpp
+)
+set(SOURCE
     ${SOURCE_DIR}/main.cpp
     ${SOURCE_DIR}/basic_sniffer.cpp
     ${SOURCE_DIR}/display.cpp
 )
 
-include_directories(${INCLUDE_DIR})
-add_executable(sniffer ${SOURCE_FILES})
+add_executable(sniffer 
+${SOURCE}
+${HEADER_FILES}
+)
+target_include_directories(sniffer PUBLIC ${INCLUDE_DIR})
 target_link_libraries(sniffer ${PCAP_LIBRARY})
